[tool.poetry]
name = "apireddit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pandas = "^1.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
